<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>core-java-networking-3</artifactId>
    <packaging>jar</packaging>
    <name>core-java-networking-3</name>

    <parent>
        <groupId>com.baeldung.core-java-modules</groupId>
        <artifactId>core-java-modules</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <dependencies>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.core.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>${jetty.embeded.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-core</artifactId>
            <version>${tomcat.embeded.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.angus</groupId>
            <artifactId>angus-mail</artifactId>
            <version>${angus.mail.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.seancfoley/ipaddress -->
        <dependency>
            <groupId>com.github.seancfoley</groupId>
            <artifactId>ipaddress</artifactId>
            <version>${seancfoley.ipaddress.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.jgonian/commons-ip-math -->
        <dependency>
            <groupId>com.github.jgonian</groupId>
            <artifactId>commons-ip-math</artifactId>
            <version>${jgonian.commons-ip-math.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.googlecode.java-ipv6/java-ipv6 -->
        <dependency>
            <groupId>com.googlecode.java-ipv6</groupId>
            <artifactId>java-ipv6</artifactId>
            <version>${googlecode.ipv6.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>${apache.commons-validator.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>core-java-networking-3</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <spring.core.version>5.2.8.RELEASE</spring.core.version>
        <jetty.embeded.version>9.4.31.v20200723</jetty.embeded.version>
        <tomcat.embeded.version>10.0.0-M7</tomcat.embeded.version>
        <seancfoley.ipaddress.version>5.3.3</seancfoley.ipaddress.version>
        <jgonian.commons-ip-math.version>1.32</jgonian.commons-ip-math.version>
        <googlecode.ipv6.version>0.17</googlecode.ipv6.version>
        <angus.mail.version>2.0.1</angus.mail.version>
        <apache.commons-validator.version>1.7</apache.commons-validator.version>
    </properties>

</project>